--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
     "outDir": "./dist",
     "strict": true,
     "declaration": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "target": "es2015",
     "module": "commonjs",
+    "jsx": "react-jsx",
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "esModuleInterop": true,
