--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "tsx watch src/index.tsx",
     "serve:production": "node ./dist/index.cjs",
-    "build": "tsup-node src/index.tsx --dts",
+    "build": "tsup src/index.tsx",
     "check-all": "run-s format lint:fix",
     "format": "run-s \"format:no-write --write\"",
     "format:no-write": "prettier \"./**/*.{ts,md,json,yml,yaml}\"",
@@ -20,9 +20,7 @@
     "dotenv": "^16.3.1",
     "node-insim": "3.0.0",
     "react": "^18.2.0",
-    "react-node-insim": "file:.yalc/react-node-insim",
-    "supports-color": "^9.4.0",
-    "tiny-typed-emitter": "^2.1.0"
+    "react-node-insim": "file:.yalc/react-node-insim"
   },
   "devDependencies": {
     "@types/debug": "^4.1.8",
@@ -35,7 +33,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^3.0.0",
-    "tsup": "^7.1.0",
+    "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6"
   },
