--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "scripts": {
     "dev": "tsx watch src/index.tsx",
     "serve:production": "node ./dist/index.cjs",
-    "build": "tsup src/index.tsx",
+    "build": "run-s build:*",
+    "build:tsc": "tsc --noEmit",
+    "build:tsup": "tsup src/index.tsx",
     "check-all": "run-s format lint:fix",
     "format": "run-s \"format:no-write --write\"",
-    "format:no-write": "prettier \"./**/*.{ts,md,json,yml,yaml}\"",
+    "format:no-write": "prettier \"./**/*.{ts,tsx,md,json,yml,yaml}\"",
     "format:check": "run-s \"format:no-write --check\"",
     "lint": "eslint \"./src/**/*\" --ext .js,.ts",
     "lint:fix": "eslint \"./src/**/*\" --ext .js,.ts --fix"
@@ -32,6 +34,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
