--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^16.3.1",
     "node-insim": "4.0.0",
     "react": "^18.2.0",
-    "react-node-insim": "*"
+    "react-node-insim": "^0.0.6"
   },
   "devDependencies": {
     "@types/debug": "^4.1.8",
