Use path aliases for src folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "skipDefaultLibCheck": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "ts-node": {
     "esm": true
